# INFO4

./: .gitignore  .markdownlint.json  SUMMARY.md  book.json  package.json
AR/TP/tp1/tmp/: f1  f2  f3
CC/: 1.md
CC/CM/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md
CL/: .gitignore  1.md  2.md
CL/CM/: 2.md  3.md  4.md
CL/TP/1/: 1.md  test
CL/TP/2/: 2.md
CL/TP/3/: 3.md  splitletters.awk
CL/TP/3/data/: clean  cs.txt  da.txt  es.txt  et.txt  fi.txt  hu.txt  (+15 more)
CL/TP/4/: 4.md
CL/TP/5/: 5.md  config-rnn-basic.yml
GL/: .gitignore  1.md  2.md  3.md  4_git.md
II/: 1.md
II/CM/: 1.md  2.md  annale.md
II/TP/0-CLI/: test  trace.py
II/TP/downloader.src/: .classpath  .project
LT/CM/: 1.md  2.md  cours1.org  cours2_B_A_BA.v
LT/TD/: 1-exo1.kra  1-exo2.kra  1.md  Murphy_CC.v  docker-ltpf
LT/TD/1/: 1.md
LT/TD/2/: TD2_pred_induc.org  TD2_recur.v
LT/TD/5/: TD6_SN_While.v  TD6_preds_induc_liste_beg.v
LT/TD/6_fichiers-exam/: projet_2019_AST.v  projet_2019_semantique_eleves_a_completer.v
PF/: 1.md
PF/CM/: 1.md  2.md  3.md  4.md
PF/TD/: 1.ml  2.ml  3.ml  4.ml  5.ml  docker-ltpf
PS/: 1.md
PS/CM/: 1.md  2.md  3.md  4.md
PS/TD/: 1.Rmd  1.md  2.Rmd  3.Rmd  4.Rmd  5.Rmd  6.Rmd
RI/: 1.md
RI/CM/1/: 1.md
RI/CM/2/: 2.md
RI/CM/3/: 3.md
RI/TD/1/: 1.md
RI/TD/2/: 2.md
RI/TP/1/: 1.md  README  split_cacm.py  tp2.py  tp3.py  zipf.py
RO/: 1.md
RO/CM/: 1.md  2.md  3.md  4.md
RO/TD/: 1.md
S7/CC/CM/: 2.md  3.md  4.md  7.md
S7/II/CM/: 1.md  annale.md
S7/LT/CM/: 5.v
S7/LT/TD/: CC_7nov.v
S7/PF/CM/: 2.md
S7/PF/TD/: 4.ml  6.ml  preuves.md
S7/PS/CM/: 1.md  2.md  5.md
S7/PS/TD/: 2.Rmd  3.Rmd  7.Rmd  8.Rmd  draft.R
S7/RO/CM/: 1.md
S7/RO/TD/: 1.md
S7/SE/CM/: 1.md
S7/TR/CM/: 1.md  2.md  3.md
S8/AR/: 1.md
S8/SI/: 1.md
S8/TS/: 1.md
SE/: 1.md
SE/CM/: 1.md
SE/TD/: 1.md
SE/TP/1/: 1.md
SI/: 1.md
SI/CM/1/: 1.md
SI/CM/2/: 2.md
SI/CM/3/: 3.md
SI/CM/4/: 4.md
SI/CM/5/: 5.md
SI/CM/7/: 7.md
SI/TP/1/: 1.md  CMakeLists.txt  external1
SI/TP/1/models/: cube.off
SI/TP/1/shader/: fragment.glsl  vertex.glsl  vertex2.glsl
SI/TP/1/src/: main.cpp
SI/TP/2/: 2.md  CMakeLists.txt
SI/TP/2/models/: blob.off  blob2.off  square.off  text.off  text_2.off  triangle.off
SI/TP/2/shader/: fragment.glsl  vertex.glsl
SI/TP/2/src/: main.cpp
SI/TP/3/: 3.md  CMakeLists.txt
SI/TP/3b/: 3b.md  CMakeLists.txt
SI/TP/4/: 4.md  CMakeLists.txt
SI/TP/5/: 5.md  CMakeLists.txt
SI/TP/6/: 6.md  CMakeLists.txt
SI/TP/6/shader/: fragment.glsl  vertex.glsl
SI/TP/6/src/: Mesh.cpp  Mesh.h  main.cpp
TR/: 1.md
TR/CM/: 1.md  2.md  3.md  4.md
TR/TP/1/: 1.md
TR/TP/2/: 2.md
TR/TP/3/: 3.md
TR/TP/4/: Makefile  client.c  client.h  serveur.c  serveur.h  shared.h
TR/TP/5/: 5.md
TS/: 1.md
TS/CM/1/: 1.md
TS/CM/2/: 2.md
TS/TP/2/: 2.md
styles/: pdf.css
(+134 files in other folders)
